--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ input{
     width: 278px;
     font-size: 35px;
     font-weight: bold;
+    color: black
 }
 .digit{
     background-color: white;
@@ -66,7 +67,7 @@ td,tr{
 
 button{
   
-color: black;
+color: white;
  display: flex;
  justify-content: center;
  align-items: center;
